--- a/index.html
+++ b/index.html
@@ -1,36 +1,16 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <link rel="stylesheet" href="style.css">
-	<title>MOD-2-Solution</title>
-
+	
+	<title>Assig. Mod Sol 4</title>
 
 </head>
-<body>
-	<div class="row">
-	<h1>Our Menu</h1>
-  <div class="col-lg-4 col-md-6 col-sm-12" id="container">
-    <p id="content">lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  	<p id="p1">Chicken</p>
 
-  	</div>
+<body bgcolor="navyblue">
 
-  
+	<h1 style="color: white;">- - - - - - - - - My Module-4 Solution - - - - - - - - - </h1>
 
-  <div class="col-lg-4 col-md-6 col-sm-12" id="container">
-
-  	<p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-<p id="P2">Beef</p>
-
-  </div>
-
-  <div class="col-lg-4 col-md-12 col-sm-12" id="container">
-<p  id="P3">Sushi</p>
-  	<p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  </div>
-
-	</div>	
-
+  <h2 style="color: purple;"> (Open up Chrome Developer Tools and Switch to the Console Tab) </h2>
+	<script src="script.js"></script>
 </body>
 </html>
